attached_assets/Pasted-2025-05-28T03-58-21Z-info-Deployment-86391ddc-c684-4527-976b-e2e3917650ce-2025-05-28T03-58-21Z-inf-1748405055936.txt
2025-05-28T03:58:21Z info: Deployment: 86391ddc-c684-4527-976b-e2e3917650ce
2025-05-28T03:58:21Z info: Build: 821fa05c-484e-4e89-b3bc-4285853368c1
2025-05-28T03:58:21Z info: Connecting to builder
2025-05-28T03:58:24Z info: Builder connected
2025-05-28T03:58:25Z info: Installing packages
--> npm install

109 packages are looking for funding

  run `npm fund` for details

npm notice
npm notice New major version of npm available! 10.8.2 -> 11.4.1
npm notice Changelog: https://github.com/npm/cli/releases/tag/v11.4.1
npm notice To update run: npm install -g npm@11.4.1
npm notice

2025-05-28T03:58:42Z info: Starting Build

> vite_react_shadcn_ts@0.0.0 build
> vite build


NODE_ENV=production is not supported in the .env file. Only NODE_ENV=development is supported to create a development build of your project. If you need to set process.env.NODE_ENV, you can set it in the Vite config instead.

vite v5.4.10 building for production...

transforming...

Browserslist: browsers data (caniuse-lite) is 7 months old. Please run:
  npx update-browserslist-db@latest
  Why you should do it regularly: https://github.com/browserslist/update-db#readme

node_modules/bluebird/js/release/util.js (165:2): Use of eval in "node_modules/bluebird/js/release/util.js" is strongly discouraged as it poses security risks and may cause issues with minification.

✓ 4267 modules transformed.

rendering chunks...

computing gzip size...

dist/index.html                     0.67 kB │ gzip:   0.39 kB

dist/assets/index-B6suKVSz.css     71.33 kB │ gzip:  12.03 kB

dist/assets/index-DCcqjsAK.js   2,215.84 kB │ gzip: 600.51 kB

(!) Some chunks are larger than 500 kB after minification. Consider:
- Using dynamic import() to code-split the application
- Use build.rollupOptions.output.manualChunks to improve chunking: https://rollupjs.org/configuration-options/#output-manualchunks
- Adjust chunk size limit for this warning via build.chunkSizeWarningLimit.
✓ built in 15.65s

Environment variables loaded from .env

Prisma schema loaded from prisma/schema.prisma


✔ Generated Prisma Client (v6.8.2) to ./node_modules/@prisma/client in 146ms

Start by importing your Prisma Client (See: https://pris.ly/d/importing-client)

Tip: Want to turn off tips and other hints? https://pris.ly/tip-4-nohints


Environment variables loaded from .env

Prisma schema loaded from prisma/schema.prisma

Datasource "db": PostgreSQL database "neondb", schema "public" at "ep-weathered-band-a64zfol1.us-west-2.aws.neon.tech"


The database is already in sync with the Prisma schema.

Running generate... (Use --skip-generate to skip the generators)
Running generate... - Prisma Client
✔ Generated Prisma Client (v6.8.2) to ./node_modules/@prisma/client in 167ms

2025-05-28T03:59:12Z info: Pushing pid1 binary layer...
2025-05-28T03:59:13Z info: Pushing Repl layer...
2025-05-28T03:59:13Z info: Pushing hosting layer...
2025-05-28T03:59:13Z info: Retrieved cached nix layer
2025-05-28T03:59:13Z info: Created hosting layer
2025-05-28T03:59:14Z info: Created pid1 binary layer
2025-05-28T03:59:53Z info: Created Repl layer
2025-05-28T03:59:53Z info: Pushed image manifest
2025-05-28T03:59:54Z info: Pushed soci index manifest
2025-05-28T03:59:59Z info: Creating Autoscale service
         ^

npm notice Changelog: https://github.com/npm/cli/releases/tag/v11.4.1
starting up user application

command finished with error [sh -c NODE_ENV=production PORT=8080 npx tsx src/server/index.ts]: exit status 1
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:122:5)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:122:5)
import { EmailService } from '../services/email';
/home/runner/workspace/src/server/routes/email.ts:4
    at async ModuleJob.run (node:internal/modules/esm/module_job:229:5)
/home/runner/workspace/src/server/routes/email.ts:4
    at async ModuleLoader.import (node:internal/modules/esm/loader:473:24)
/home/runner/workspace/src/server/routes/email.ts:4

Node.js v20.18.1
    at async ModuleLoader.import (node:internal/modules/esm/loader:473:24)
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:146:21)
/home/runner/workspace/src/server/routes/email.ts:4
SyntaxError: The requested module '../services/email' does not provide an export named 'EmailService'
crash loop detected
2025-05-28T04:03:10Z error: The deployment is crash looping. This can happen if the run command fails or exits immediately after starting. Check the logs for more information.